# Liao

./: AGENTS.md  README.md  README_CN.md  liao_reference.py  publish.bat  publish.sh  pyproject.toml  run_gui.py  test_wechat.py  upload_pypi.bat  upload_pypi.sh
images/: liao_help.txt
scripts/: generate_screenshots.py  upload_pypi.py
src/liao/: __init__.py  __main__.py  api.py  cli.py  tools.py
src/liao/agent/: __init__.py  chat_parser.py  conversation.py  prompts.py  workflow.py
src/liao/core/: __init__.py  area_detector.py  chat_automation.py  input_simulator.py  macos_input.py  macos_screenshot.py  screenshot.py  send_mode.py  smart_automation.py  smart_automation.py.bak  wechat_automation.py  window_manager.py
src/liao/gui/: __init__.py  main_window.py  overlay.py  workers.py
src/liao/gui/i18n/: __init__.py  en_US.json  translator.py  zh_CN.json
src/liao/gui/pages/: __init__.py  area_page.py  base_page.py  chat_page.py  connection_page.py  opencode_page.py  window_page.py
src/liao/gui/widgets/: __init__.py  progress_indicator.py
src/liao/llm/: __init__.py  anthropic_client.py  base.py  factory.py  ollama.py  openai_client.py
src/liao/models/: __init__.py  detection.py  message.py  window.py
src/liao/opencode/: __init__.py  client.py  models.py
tests/: __init__.py  conftest.py  test_agent.py  test_core.py  test_llm.py  test_opencode.py  test_unified_api.py
